--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <!-- 2. 主导航：放菜单链接 -->
   <nav>
     <a href="#about">关于我</a>
-    <a href="F:\网站学习用\源码\我的第一个网站\collection.html">收藏品</a>
+    <a href="collection.html">收藏品</a>
     <a href="#contact">联系我</a>
   </nav>
 
